src/assets/deployment/deployment-strategy-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-strategy-recreate
spec:
  replicas: 20
  selector:
    matchLabels: 
      tier: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: web
    spec:
      containers:
        - image: nginx
          name: nginx
