src/assets/deployment/bluegreen-ingress-based.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blue-ingress-based
  name: blue-ingress-based
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-ingress-based
  template:
    metadata:
      labels:
        app: blue-ingress-based
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: green-ingress-based
  name: green-ingress-based
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-ingress-based
  strategy: {}
  template:
    metadata:
      labels:
        app: green-ingress-based
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-ingress-based
  name: blue-ingress-based
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blue-ingress-based
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: green-ingress-based
  name: green-ingress-based
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: green-ingress-based
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: bluegreen-ingress-based
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: blue-ingress-based
            port:
              number: 80
        path: /
        pathType: Exact
