src/assets/deployment/canary-service-based.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary-old-version
  name: canary-old-version
spec:
  replicas: 4
  selector:
    matchLabels:
      app: canary-old-version
  template:
    metadata:
      labels:
        app: canary-old-version
        canary: "true"
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
          - name: site
            mountPath: /usr/share/nginx/html
      volumes:
        - name: site
          configMap:
            name: old-version
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary-new-version
  name: canary-new-version
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-new-version
  template:
    metadata:
      labels:
        app: canary-new-version
        canary: "true"
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
          - name: site
            mountPath: /usr/share/nginx/html
      volumes:
        - name: site
          configMap:
            name: new-version
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: canary
  name: canary
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    canary: "true"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-old-version
spec:
  rules:
  - host: site.info
    http:
      paths:
      - backend:
          service:
            name: canary
            port:
              number: 80
        path: /
        pathType: Exact
